# NumBAT

./: .gitignore  .readthedocs.yaml  :wq  CITATION.cff  Makefile  README.md  README.rst  docker_notes.md  make.inc  nb_config.txt  numbat.toml  pyproject.toml  requirements.txt  setup.sh  todo.txt
JOSAB_tutorial/: Makefile  simo-josab-01-BSBS-1umcylwg-SiO2.py  simo-josab-01.py  simo-josab-02-BSBS-450x200nmrectwg-Si.py  simo-josab-02b-BSBS-acbands-450x200nmrectwg-Si.py  simo-josab-02b-acdisp.py  simo-josab-03-FSBS-1umcylwg-SiO2.py  simo-josab-03.py  simo-josab-04-FSBS-450x200nmrectwg-Si.py  simo-josab-04.py  simo-josab-05-IFSBS-1umcylwg-SiO2.py  simo-josab-05.py  simo-josab-06-IFSBS-450x200nmrectwg-Si.py  simo-josab-06.py  simo-josab-BSBS-1umcylwg-SiO2.py  simo-josab-BSBS-450x200nmrectwg-Si.py  simo-josab-BSBS-acbands-450x200nmrectwg-Si.py  simo-josab-FSBS-1umcylwg-SiO2.py  simo-josab-FSBS-450x200nmrectwg-Si.py  simo-josab-IFSBS-1umcylwg-SiO2.py  simo-josab-IFSBS-450x200nmrectwg-Si.py
backend/: .mode_calcs.py.swp  NumBATstyle.mplstyle  bulkprops.py  bulkprops.py.ps  crystalsyms.py  femmesh.py  integration.py  materialprops.py  materials.py  materials.py.ps  mode_calcs.py  mode_calcs.py.ps~  modecalcs.py  modes.py  nb_install_tester.py  nb_runconfig_test.bat  nb_runconfig_test.ps1  nb_runconfig_test.sh  nb_test_setup.py  nbanalytic.py  nbgmsh.py  nbplatform.py  nbthread.py  nbtypes.py  nbversion.py  numbat.py  numbattools.py  objects.py  obselete_gain_funcs.py  plotgain.py  plotmoderaw.py  plotmodes.py  plotting.py  plottools.py  reporting.py  simresult.py  spare.py  structure.py  usermesh.py  voigt.py  (+2 more)
backend/fortran/: Makefile  Makefile.macos  Makefile.meson  Makefile.old  Makefile.win  NumBAT.exp  NumBAT.lib  compile_commands.json  fem_calcs.nb  meson.build  meson.options  mover.sh  nb-darwin-native-file.ini  nb-linuxcuda-native-file.ini  nb-linuxintel-native-file.ini  nb-win-native-file.ini  nb_build_config.txt  nb_fortran.pyd  py_calc_modes.f  py_calc_modes_AC.f  todo.txt  tt.f90  valpr_umf_64.f
backend/fortran/lib/: umf4_f77zwrapper_SS_7.1.0_linux.c  umf4_f77zwrapper_methods.h
backend/fortran/mes_test/: mes_test.f90  mes_test_test.f90  meson.build
backend/fortran/mods/: array_sol_ac__genmod.f90  asmbly__genmod.f90  asmbly_ac__genmod.f90  basis_ls__genmod.f90  basis_vec__genmod.f90  bound_cond__genmod.f90  bound_cond_ac__genmod.f90  calc_em_modes__genmod.f90  csr_length__genmod.f90  csr_length_ac__genmod.f90  csr_max_length__genmod.f90  csr_max_length_ac__genmod.f90  curved_elem_tri__genmod.f90  em_mode_e_energy_int__genmod.f90  em_mode_energy_int__genmod.f90  em_mode_energy_int_ez__genmod.f90  em_mode_energy_int_v2__genmod.f90  em_mode_energy_int_v2_ez__genmod.f90  em_mode_energy_int_v2_wg__genmod.f90  geometry__genmod.f90  get_clocks__genmod.f90  get_coord_p3__genmod.f90  get_h_field_p3__genmod.f90  gmsh_post_process__genmod.f90  gmsh_post_process_ac__genmod.f90  h_mode_field_ez__genmod.f90  interp_nod_2d__genmod.f90  jacobian_p1_2d__genmod.f90  jacobian_p2_2d__genmod.f90  lattice_vec__genmod.f90  list_edge__genmod.f90  list_face__genmod.f90  list_node_p3__genmod.f90  mat_el__genmod.f90  mat_el_energy__genmod.f90  mat_el_energy_rho__genmod.f90  mat_el_v2__genmod.f90  mat_el_v3__genmod.f90  mat_p2_p2__genmod.f90  mat_p2_p2_p2_1d__genmod.f90  (+23 more)
backend/fortran/msh/: 1_on_slab_msh_template.geo  circ_onion1_msh_template.geo  circ_onion3_msh_template.geo  circ_onion_msh_template.geo  msh2png.scr  onion1_msh_template.geo  onion_msh_template.geo  pedestal_msh_template.geo  rib_double_coated_msh_template.geo  rib_msh_template.geo  slot_msh_template.geo  twoincl_msh_template.geo
backend/fortran/obselete/: obs_ac_mode_power_int_v2.f90  obs_bound_cond_em.f90  obs_build_mesh_tables.f90  obs_csr_max_length_ac.f90  obs_label_edges.f90  obs_label_nodes_P3.f90  obs_nbinterfaces_module.f90  obs_phi_vector_map.f90  obs_photoelastic_int_curvilinear_impl.f90  obs_photoelastic_int_linear.f90  obs_py_calc_modes_impl.f90  obs_type_node_edge_face.f90  obs_valpr_umf_64_ac.f90
backend/fortran/src/: AC_alpha_int.f  AC_alpha_int_v2.f  AC_mode_elastic_energy_int_v4.f  AC_mode_power_int_v2.f  AC_mode_power_int_v4.f  EM_mode_E_energy_int.f  EM_mode_energy_int_v2.f  EM_mode_energy_int_v2_Ez.f  EM_mode_energy_int_v2_wg.f  aaa_numbatmod.f  ac_alpha_analytic.f90  ac_alpha_analytic_f2py_entry.f90  ac_alpha_int.f  ac_alpha_int.f90  ac_alpha_int_v2.f  ac_alpha_int_v2.f90  ac_alpha_quadrature.f90  ac_mode_elastic_energy_int.f  ac_mode_elastic_energy_int_v4.f  ac_mode_energy_analytic.f90  ac_mode_energy_quadrature.f90  ac_mode_power_analytic.f90  ac_mode_power_analytic_impl.f90  ac_mode_power_int.f  ac_mode_power_int.f90  ac_mode_power_int_v2.f  ac_mode_power_int_v2.f90  ac_mode_power_int_v4.f  ac_mode_power_int_v4.f90  ac_mode_power_quadrature.f90  alloc_module.f90  analytic_integrator_impl.f90  array_material_AC.f  array_material_EM.f  array_material_ac.f  array_material_ac.f90  array_material_em.f  array_material_em.f90  array_size.f  array_size.f90  (+269 more)
backend/fortran/src/pdf/: array_sol.f.ps  asmbly.f.ps  py_calc_modes.f.ps
backend/fortran/src/spare/: ac_alpha_int.f  ac_alpha_int_v2.f  ac_mode_elastic_energy_int.f  ac_mode_power_int.f  ac_mode_power_int_v4.f  csr_length_AC.f  em_mode_act_energy_int.f  em_mode_e_energy_int.f  em_mode_energy_int.f  em_mode_energy_int_ez.f  em_mode_energy_int_v2.f  em_mode_energy_int_v2_ez.f  em_mode_energy_int_v2_wg.f  get_H_field_p3.f  gmsh_post_process.f  gmsh_post_process_ac.f  h_mode_field_ez.f  interp_nod_2d.f  jacobian_p1_2d.f  jacobian_p2_2d.f  lattice_vec.f  moving_boundary.f  nbinterfaces_module.f90  periodic_N_E_F.f  periodic_cond.f  periodic_node.f  photoelastic_int.f  photoelastic_int_v2.f  py_calc_modes.f.old  py_calc_modes.f95.good  quad_triangle.f  sort_csr.f  z_indexx.f  z_indexx_AC.f
backend/fortran/sswrap/: meson.build  umf4_f77zwrapper_SS_3.7.1.c  umf4_f77zwrapper_SS_4.2.0.c  umf4_f77zwrapper_SS_7.1.0.c  umf4_f77zwrapper_SS_7.1.0_linux.c  umf4_f77zwrapper_SS_7.1.0_win.c
docs/: 1  Makefile  ouyt  requirements.txt  tt
examples/: Makefile
(+365 files in other folders)
